<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- General -->
    <string name="Today">Today</string>
    <string name="Yesterday">Yesterday</string>
    <string name="NoConnectionTitle">No connection</string>
    <string name="NoConnectionText">You are not connected to the internet, please retry later.</string>
    <string name="PositiveButton">Save</string>
    <string name="NegativeButton">Cancel</string>
    <string name="NeutralButton">OK</string>
    <string name="ToastUnreadArticles">Show unread items only</string>
    <string name="ToastAllArticles">Show all items</string>
    <string name="ToastNothingToRefresh">There\'s nothing to refresh.</string>
    <string name="AddDefaultFeedsDialogTitle">Welcome to Holo Reader</string>
    <string name="AddDefaultFeedsDialogText">Thank you for using Holo Reader! To get you started right away there are some default feeds you can add now. You can later easily remove them choosing \"Edit Feeds\" from the menu or add your own feeds choosing \"Add Feed\".</string>
    <string name="AddDefaultFeedsDialogOk">Yes, add feeds</string>
    <string name="AddDefaultFeedsDialogCancel">No, thanks</string>
    <string name="AddDefaultFeedsSpinner">Adding feeds…</string>
    <string name="AddDefaultFeedsToast">Syncing default feeds…</string>
    <string name="PushRegistrationSpinner">Registering for FeedPusher…</string>

    <!-- Menu -->
    <string name="MenuRefresh">Refresh Feeds</string>
    <string name="MenuAdd">Add feed</string>
    <string name="MenuEditFeeds">Edit Feeds</string>
    <string name="MenuRegisterForPush">Enable FeedPusher</string>
    <string name="MenuToogleUnread">Toggle unread items</string>
    <string name="MenuMarkRead">Mark all as read</string>
    <string name="MenuWeb">Open link in browser</string>

    <!-- Changelog -->
    <string name="ChangelogTitle">Changelog</string>

    <!-- Article -->
    <string name="LoadingArticle">Loading article…</string>

    <!-- Article List -->
    <string name="LoadingArticles">Loading articles…</string>
    <string name="NoArticles">No articles yet.</string>
    <string name="NoUnreadArticles">No unread articles.</string>
    <string name="ArticleImageDesc">Article Image</string>

    <!-- Feed List -->
    <string name="LoadingFeeds">Loading feeds…</string>
    <string name="NoFeeds">No feeds yet.</string>
    <string name="NoFeedsHint">You haven\'t added any feeds yet. Just go to the menu and choose \"Add feed\" to get started. Or enable FeedPusher from the menu for easily adding feeds from your desktop computer.</string>
    <string name="NoUnreadFeeds">No unread feeds.</string>
    <string name="AllFeeds">All feeds</string>
    <string name="LastUpdate">Last Update</string>
    <string name="RSSIconDesc">RSS Icon</string>

    <!-- Feed editor -->
    <string name="EditFeedsCABTitle">Select feeds to edit</string>
    <string name="EditFeedsTitle">Edit feeds</string>
    <string name="EditFeedsMenuDelete">Delete selected feeds</string>
    <string name="EditFeedsMenuEdit">Edit selected feed</string>
    <string name="EditFeedsNoFeeds">No feeds.</string>

    <!-- Feed edit dialog -->
    <string name="EditFeedDialogTitle">Edit feed</string>
    <string name="EditFeedDialogName">Feed name</string>
    <string name="EditFeedDialogURL">Feed URL</string>
    <string name="EditFeedDeleteSpinner">Deleting feed(s)…</string>

    <plurals name="numberOfFeedsSelected">
        <item quantity="one">One feed selected</item>
        <item quantity="other">%d feeds selected</item>
    </plurals>

    <!-- Add feed -->
    <string name="AddFeedDialogTitle">@string/MenuAdd</string>
    <string name="AddFeedDialogHint">You can either provide a full feed URL or just a website URL (if supported by the website), e.g. just \"cnn.com\" instead of \"http://rss.cnn.com/rss/edition.rss\"</string>
    <string name="AddFeedDialogText">Feed URL</string>
    <string name="AddFeedDialogOk">Add feed</string>
    <string name="AddFeedSpinner">Adding feed…</string>
    <string name="AddFeedErrorInvalidUrl">The supplied URL is not valid.</string>
    <string name="AddFeedErrorConnection">Can\'t connect to the supplied URL.</string>
    <string name="AddFeedErrorNoFeed">No feed found at supplied URL.</string>
    <string name="AddFeedErrorIncompatibleFeed">The supplied feed is not compatible.</string>
    <string name="AddFeedErrorOther">I\'m sorry, but I don\'t really know what happened.</string>
    <string name="AddFeedError">Something went wrong</string>

    <!-- Pushing feeds -->
    <string name="FeedsViaPushGmsUnavailableTitle">Error</string>
    <string name="FeedsViaPushGmsUnavailableText">Google Play Services are not available for this device, but these are necessary for FeedPusher.</string>
    <string name="FeedsViaPushEnableDialogTitle">FeedPusher</string>
    <string name="FeedsViaPushEnableDialogText">With FeedPusher (beta) you can easily add feeds to Holo Reader using your desktop computer. To enable this, your Gmail address has to be send to our server.</string>
    <string name="FeedsViaPushEnableDialogOK">Okay!</string>
    <string name="FeedsViaPushEnableDialogNOK">Abort</string>
    <string name="FeedsViaPushEnableCanceledTitle">Abort</string>
    <string name="FeedsViaPushEnableCanceledText">FeedPusher registration has been canceled.</string>
    <string name="FeedsViaPushEnableErrorTitle">Error</string>
    <string name="FeedsViaPushEnableErrorText">Enabling FeedPusher failed, please try again later.</string>
    <string name="FeedsViaPushEnabledTitle">FeedPusher enabled</string>
    <string name="FeedsViaPushEnabledText">FeedPusher has been enabled for this device and an eMail with intructions has been sent to your account.</string>
    <string name="FeedsViaPushRefreshFailed">FeedPusher has been disabled, please re-enable from the menu.</string>
    <string name="FeedsAddedViaPush">Feeds received via FeedPusher</string>

    <plurals name="numberOfFeedsReceived">
        <item quantity="one">One feed added to your list</item>
        <item quantity="other">%d feeds added to your list</item>
    </plurals>

</resources>