<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/item_refresh"
        android:icon="@drawable/ab_btn_refresh"
        android:showAsAction="ifRoom"
        android:title="@string/MenuRefresh"/>
    <item
        android:id="@+id/item_toggle"
        android:showAsAction="never"
        android:title="@string/MenuToogleUnread"/>
    <item
        android:id="@+id/item_markread"
        android:showAsAction="never"
        android:title="@string/MenuMarkRead"/>
    <item
        android:id="@+id/item_add"
        android:showAsAction="never"
        android:title="@string/MenuAdd"/>
    <item
        android:id="@+id/item_editfeeds"
        android:showAsAction="never"
        android:title="@string/MenuEditFeeds"/>

</menu>